// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wikiLinks > compile > %p HTML: WITH_ALIAS 1`] = `
VFile {
  "contents": "<h1 id="root">Root</h1>
<p><a href="foo">bar doesn't foo</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="bar">Bar</a></li>
<li><a href="foo">Foo</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p HTML: WITH_ALIAS_APOSTROPHE 1`] = `
VFile {
  "contents": "<h1 id="root">Root</h1>
<p><a href="kb.note.20211011124050">Coulomb's Constant</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="bar">Bar</a></li>
<li><a href="foo">Foo</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p HTML: WITH_ALIAS_HASH 1`] = `
VFile {
  "contents": "<h1 id="root">Root</h1>
<p><a href="foo">#bar</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="bar">Bar</a></li>
<li><a href="foo">Foo</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p HTML: WITH_ANCHOR 1`] = `
VFile {
  "contents": "<h1 id="root">Root</h1>
<p><a href="foo#one">Foo</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="bar">Bar</a></li>
<li><a href="foo">Foo</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p HTML: WITH_BLOCK_ANCHOR 1`] = `
VFile {
  "contents": "<h1 id="root">Root</h1>
<p><a href="foo#^block">Foo</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="bar">Bar</a></li>
<li><a href="foo">Foo</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p HTML: WITH_EXTENSION 1`] = `
VFile {
  "contents": "<h1 id="root">Root</h1>
<p><a href="foo">Foo</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="bar">Bar</a></li>
<li><a href="foo">Foo</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p HTML: WITH_ID_AS_LINK 1`] = `
VFile {
  "contents": "<h1 id="root">Root</h1>
<p><a href="foo-id">Foo</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="foo-id">Foo</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p HTML: WITH_SAME_FILE_BLOCK_ANCHOR 1`] = `
VFile {
  "contents": "<h1 id="root">Root</h1>
<p><a href="/">Root</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="bar">Bar</a></li>
<li><a href="foo">Foo</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p HTML: WITH_XVAULT_LINK_TO_OTHER_VAULT 1`] = `
VFile {
  "contents": "<h1 id="root">Root</h1>
<p><a href="foo-2">Foo</a></p>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p HTML: WITH_XVAULT_LINK_TO_SAME_VAULT 1`] = `
VFile {
  "contents": "<h1 id="root">Root</h1>
<p><a href="foo">Foo</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="bar">Bar</a></li>
<li><a href="foo">Foo</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p HTML: WITH_XVAULT_LINK_TO_SAME_VAULT_AND_ALIAS 1`] = `
VFile {
  "contents": "<h1 id="root">Root</h1>
<p><a href="foo">bar</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="bar">Bar</a></li>
<li><a href="foo">Foo</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p HTML: regular 1`] = `
VFile {
  "contents": "<h1 id="root">Root</h1>
<p><a href="foo">Foo</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="bar">Bar</a></li>
<li><a href="foo">Foo</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_DENDRON: WITH_ALIAS 1`] = `
VFile {
  "contents": "# Root

[[bar doesn't foo|foo]]

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_DENDRON: WITH_ALIAS_APOSTROPHE 1`] = `
VFile {
  "contents": "# Root

[[Coulomb's Constant|kb.note.20211011124050]]

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_DENDRON: WITH_ALIAS_HASH 1`] = `
VFile {
  "contents": "# Root

[[#bar|foo]]

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_DENDRON: WITH_ANCHOR 1`] = `
VFile {
  "contents": "# Root

[[foo#one]]

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_DENDRON: WITH_BLOCK_ANCHOR 1`] = `
VFile {
  "contents": "# Root

[[foo#^block]]

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_DENDRON: WITH_EXTENSION 1`] = `
VFile {
  "contents": "# Root

[[foo]]

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_DENDRON: WITH_ID_AS_LINK 1`] = `
VFile {
  "contents": "# Root

[[foo]]

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_DENDRON: WITH_SAME_FILE_BLOCK_ANCHOR 1`] = `
VFile {
  "contents": "# Root

[[root#^block]]

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_DENDRON: WITH_SPACE_AND_ALIAS 1`] = `
VFile {
  "contents": "# Root

[[bar|foo bar]]

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_DENDRON: WITH_XVAULT_LINK_TO_OTHER_VAULT 1`] = `
VFile {
  "contents": "# Root

[[dendron://vault2/foo]]

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_DENDRON: WITH_XVAULT_LINK_TO_SAME_VAULT 1`] = `
VFile {
  "contents": "# Root

[[dendron://vault1/foo]]

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_DENDRON: WITH_XVAULT_LINK_TO_SAME_VAULT_AND_ALIAS 1`] = `
VFile {
  "contents": "# Root

[[bar|dendron://vault1/foo]]

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_DENDRON: regular 1`] = `
VFile {
  "contents": "# Root

[[foo]]

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_REGULAR: WITH_ALIAS 1`] = `
VFile {
  "contents": "# Root

[bar doesn't foo](foo)

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_REGULAR: WITH_ALIAS_APOSTROPHE 1`] = `
VFile {
  "contents": "# Root

[Coulomb's Constant](kb.note.20211011124050)

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_REGULAR: WITH_ALIAS_HASH 1`] = `
VFile {
  "contents": "# Root

[#bar](foo)

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_REGULAR: WITH_ANCHOR 1`] = `
VFile {
  "contents": "# Root

[Foo](foo)

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_REGULAR: WITH_BLOCK_ANCHOR 1`] = `
VFile {
  "contents": "# Root

[Foo](foo)

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_REGULAR: WITH_EXTENSION 1`] = `
VFile {
  "contents": "# Root

[Foo](foo)

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_REGULAR: WITH_SAME_FILE_BLOCK_ANCHOR 1`] = `
VFile {
  "contents": "# Root

[Root](root)

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_REGULAR: WITH_SPACE_AND_ALIAS 1`] = `
VFile {
  "contents": "# Root

[bar](foo%20bar)

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_REGULAR: WITH_XVAULT_LINK_TO_OTHER_VAULT 1`] = `
VFile {
  "contents": "# Root

[Foo](foo)

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_REGULAR: WITH_XVAULT_LINK_TO_SAME_VAULT 1`] = `
VFile {
  "contents": "# Root

[Foo](foo)

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_REGULAR: WITH_XVAULT_LINK_TO_SAME_VAULT_AND_ALIAS 1`] = `
VFile {
  "contents": "# Root

[bar](foo)

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > compile > %p MD_REGULAR: regular 1`] = `
VFile {
  "contents": "# Root

[Foo](foo)

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`wikiLinks > parse > cross vault wikilink with spaces 1`] = `
{
  "data": {
    "alias": "foo",
    "anchorHeader": undefined,
    "sameFile": false,
    "vaultName": "vault1",
  },
  "position": Position {
    "end": {
      "column": 31,
      "line": 1,
      "offset": 30,
    },
    "indent": [],
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "wikiLink",
  "value": "foo",
}
`;

exports[`wikiLinks > parse > fail: bad format 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": Position {
            "end": {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
            "indent": [],
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "[",
        },
        {
          "data": {
            "alias": undefined,
            "anchorHeader": undefined,
            "sameFile": false,
            "vaultName": undefined,
          },
          "position": Position {
            "end": {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
            "indent": [],
            "start": {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
          },
          "type": "wikiLink",
          "value": "foo bar",
        },
        {
          "position": Position {
            "end": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "indent": [],
            "start": {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
          },
          "type": "text",
          "value": "]",
        },
      ],
      "position": Position {
        "end": {
          "column": 14,
          "line": 1,
          "offset": 13,
        },
        "indent": [],
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
